# SmartScgedule

./: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  smartscgedule.qmlproject
android/: AndroidDeploymentSettings.json  AndroidManifest.xml
qml/Common/: Colors.qml  qmldir
qml/Pages/: PageFactory.qml
qml/Pages/Login/: AuthenticationPage.qml
qml/Pages/Menu/: MainMenuPage.qml
qml/Pages/Splash/: SplashPage_Form.ui.qml
qml/UILibrary/Forms/: BaseForm.qml  OneButtonForm.qml  TwoButtonsForm.qml
src/: README.md
src/qml/: Main.qml
src/qml/Common/: CMakeLists.txt  Colors.qml  Consts.qml  Enums.qml  Fonts.qml
src/qml/Models/: AlarmModel.qml  AlarmNotificationsModel.qml  CMakeLists.txt
src/qml/Pages/: CMakeLists.txt  PageFactory.qml  qmldir
src/qml/Pages/Footer/: AlarmNotifications.qml  AlarmPage.qml  AlarmPage_Form.ui.qml  HomePage.qml  HomePage_Form.ui.qml
src/qml/Pages/Login/: AuthenticationPage.qml  AuthenticationPage_Form.ui.qml
src/qml/Pages/Menu/: MainMenuPage.qml  MainMenuPage_Form.ui.qml  WelcomePage.qml  WelcomePage_Form.ui.qml
src/qml/Pages/Splash/: SplashPage.qml  SplashPage_Form.ui.qml
src/qml/Styles/SmartScheduleStyle/: Label.qml
src/qml/UILibrary/Components/: CMakeLists.txt  FooterPanel.qml  FooterPanel_Form.ui.qml  TopPanel.qml  TopPanel_Form.ui.qml  qmldir
src/qml/UILibrary/Components/Delegates/: DelegateDayWeekHome.qml  DelegateHomeScreenEvents.qml  DelegateSettingsList.qml
src/qml/UILibrary/Forms/: BaseForm.qml  CMakeLists.txt  OneButtonForm.qml  TitleForm.qml  TitleListForm.qml  TwoButtonsForm.qml
